# eop-solutions

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  chap01.tex  chap02.tex  chap03.tex  chap04.tex  chap05.tex  chap06.tex  chap07.tex  chap08.tex  eop.tex  eop_sln.tex
code/: brent.cpp  ex_2_1.cpp  ex_2_2.cpp  ex_4_1.cpp  levy.cpp
doc/: chap01.tex  chap02.tex  chap03.tex  chap04.tex  chap05.tex  chap06.tex  chap08.tex  eop_sln.tex
eop-code/: eop.h  tests.h
